# AICodeMemory

./: .gitignore  LICENSE  README.md  pyproject.toml
claudememory/: __init__.py  chunker.py  cli.py  embedder.py  extractor.py  searcher.py  store.py
cmem/: __init__.py  chunker.py  cli.py  codex_extractor.py  cursor_extractor.py  dialogue.py  extractor.py  heartbeat.py  mcp_server.py  raw.py  searcher.py  service.py  setup.py  sources.py  store.py  tokenizer.py
docs/changelogs/: v0.1.0.md  v0.2.0.md  v0.3.0.md
docs/other/: v0.1.0-方案.md  v0.2.0-方案.md  v0.3.0-方案.md  v0.4.0-方案.md
tests/: test_codex.py  test_contract.py  test_cursor.py  test_heartbeat.py  test_mcp.py  test_service.py  test_setup.py
