[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-memory"
version = "0.1.0"
description = "Local semantic memory for Claude Code — search your session history, verbatim, offline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "furuiyang" }]
keywords = ["claude-code", "memory", "semantic-search", "local-first"]
dependencies = [
    "sentence-transformers>=3.0",
    "jieba>=0.42",
    "numpy>=1.26",
]

[project.scripts]
cmem = "cmem.cli:main"

[tool.setuptools]
packages = ["cmem"]
