[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-memory"
version = "0.1.0"
description = "Local, cross-client semantic memory for AI coding sessions — verbatim, offline, permanent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "furuiyang" }]
keywords = ["claude-code", "codex", "cursor", "memory", "semantic-search", "local-first"]
dependencies = [
    "sentence-transformers>=3.0",
    "jieba>=0.42",
    "numpy>=1.26",
    "mcp>=1.27,<2",
]

[project.scripts]
cmem = "cmem.cli:main"
cmem-mcp = "cmem.mcp_server:main"

[tool.setuptools]
packages = ["cmem"]
